tests/characterization/snapshots/manager_env__no_metadata.snap
---
source: tests/characterization/manager.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: .metadata not found.
This directory is not an OQTOPUS manager environment.
--- end ---
